Connect Client to Api & get values

--- a/IdentityServer/Source/Client/Client/Client/Views/Shared/_Layout.cshtml
+++ b/IdentityServer/Source/Client/Client/Client/Views/Shared/_Layout.cshtml
@@ -37,7 +37,7 @@
                         @if(User.IsInRole("AppAdmin"))
                         {
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Api">Api</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="ApiResponse">ApiResponse</a>
                             </li>
                         }
                         <li class="nav-item">
